fix: stream 사용하여 sumOverThreeAndDouble 완성